Comienzo de los CRUD

--- a/TorneoFutbol.App.Frontend/Pages/Shared/_Layout.cshtml
+++ b/TorneoFutbol.App.Frontend/Pages/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta charset="utf-8">
-	<title>Torneo de Futbol</title>
+	<title>E-Migrant</title>
 	<link rel="stylesheet" type="text/css" href="/css/Estilos.css">
 	<link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" />
@@ -12,7 +12,7 @@
 	<header id = "header">
 		 <nav >
             <div class="container">
-                <a id = "titulo" class="logo" asp-area="" asp-page="/Index">Torneo de Futbol</a>
+                <a id = "titulo" class="logo" asp-area="" asp-page="/Index">E-Migrant</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
